src/test/run-pass/move-2.rs


fn main() {
    auto x = @rec(x=1, y=2, z=3);
    auto y <- x;
    assert (y.y == 2);
}